# LOOC

./: .gitignore  AUTHORS  Makefile.am  README  README.md  array.c  autogen.sh  class.c  configure.ac  hash.c  libooc-0.0.1.pc  libooc-0.0.1.pc.in  libooc.c  looc.c  parent.c  string.c
include/: array.h  array.struct.h  class.h  class.struct.h  hash.h  hash.struct.h  parent.h  string.h  string.struct.h
libooc/: Makefile  Makefile.am  Makefile.in  array.c  array.h  array.struct.h  array_macro.h  class.c  class.h  class.struct.h  class_macro.h  example-2  example.c  file.c  file.h  file.struct.h  hash.c  hash.h  hash.struct.h  hash_macro.h  inttype.h  libooc.c  macro.h  object.c  object.h  object.struct.h  object_type.h  string.c  string.conflict.h  string.struct.h  value.c  value.h
tests/: Makefile  Makefile.am  Makefile.in  array.c  check_libooc  libooc.c  macro.c  object.c
