lib_LIBRARIES = libooc-0.0.1.a
libooc_0_0_1_a_SOURCES = \
    class.c              \
    hash.c               \
    string.c             \
    array.c

liboocincludedir=$(includedir)/libooc-0.0.1/libooc
liboocinclude_HEADERS = \
    class.struct.h      \
    class.h             \
    hash.struct.h       \
    hash.h              \
    string.struct.h     \
    string.conflict.h   \
    array.struct.h      \
    array.h
